[package]
name = "displex"
version = "0.8.0"
edition = "2021"

[dependencies]
axum = { version = "0.6.18", features = ["tracing"] }
axum-sessions = { version = "0.5.0" }
tower-http = { version = "0.4.0", features = ["trace"] }

anyhow = "1.0.71"
async-trait = "0.1.68"
chrono = { version = "0.4.24", features = ["serde"] }
clap = { version = "4.3.0", features = ["derive", "env"] }
derive_more = "0.99.17"
dotenvy = "0.15.7"
oauth2 = "4"
reqwest = { version = "0.11.18", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_qs = "0.12.0"
sqlx = { version = "0.5", features = ["runtime-tokio-native-tls", "postgres", "uuid", "chrono"] }
tokio = { version = "1", features = ["full", "tracing"] }
tracing = "0.1"
tracing-actix-web = "0.7.4"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
