[package]
name = "displex"
version = "0.9.9"
edition = "2021"
authors = ["Mike Chester <mike@chester.dev>"]
readme = "README.md"
repository = "https://github.com/mchestr/displex"
license-file = "LICENSE"
keywords = ["discord", "plex", "tautulli", "discord-linked-role"]

[dependencies]
anyhow = "1.0.71"
async-trait = "0.1.68"
axum = { version = "0.6.18", features = ["tracing"] }
axum-sessions = "0.5.0"
chrono = { version = "0.4.24", features = ["serde"] }
clap = { version = "4.3.0", features = ["derive", "env"] }
derive_more = "0.99.17"
dotenvy = "0.15.7"
humantime = "2.1.0"
oauth2 = "4"
reqwest = { version = "0.11.18", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_qs = "0.12.0"
serenity = "0.11"
sqlx = { version = "0.6.3", features = ["runtime-tokio-native-tls", "postgres", "uuid", "chrono", "offline"] }
tokio = { version = "1", features = ["full", "tracing"] }
tower-http = { version = "0.4.0", features = ["trace"] }
tracing = "0.1"
tracing-actix-web = "0.7.5"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.3.3", features = ["fast-rng"] }
