[workspace]
resolver = "2"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.0.7"
# The preferred Rust toolchain to use in CI (rustup toolchain syntax)
rust-toolchain-version = "1.77.2"
# CI backends to support (see 'cargo dist generate-ci')
ci = ["github"]
# The installers to generate for each app
installers = ["shell"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["x86_64-unknown-linux-gnu"]

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
opt-level = 's'
strip = true
lto = "thin"

[package]
name = "displex"
version = "0.12.5"
edition = "2021"
authors = ["Mike Chester <mike@chestr.dev>"]
readme = "README.md"
repository = "https://github.com/mchestr/displex"
license-file = "LICENSE"
keywords = ["discord", "plex", "tautulli", "discord-linked-role", "overseerr"]
default-run = "displex"

[dependencies]
anyhow = "1.0.82"
async-trait = "0.1.69"
axum = { version = "0.7.4", features = ["macros", "tracing", "ws"] }
async-graphql-axum = "7.0.3"
async-graphql = { version = "7.0.3", features = [
    "chrono",
    "decimal",
    "uuid",
    "dataloader",
] }
chrono = { version = "0.4.34", features = ["serde"] }
clap = { version = "4.3.10", features = ["derive", "env"] }
cookie = { version = "0.18", features = ["percent-encode"] }
derivative = "2.2.0"
derive_more = "0.99.17"
dotenvy = "0.15.7"
figment = { version = "0.10.14", features = ["env", "json", "toml", "yaml"] }
humantime = "2.1.0"
humantime-serde = "1.1.1"
hyper = { version = "1.3.1", features = [] }
hyper-util = { version = "0.1", features = ["tokio", "server-auto", "http1"] }
oauth2 = "4.4.2"
reqwest = { version = "0.11.24", features = [
    "json",
    "rustls-tls-native-roots",
], default-features = false }
serde = { version = "1.0.198", features = ["derive"] }
serde_json = "1.0.116"
serde_qs = "0.12.0"
serenity = "0.12"
sqlx = { version = "0.7.2", features = [
    "runtime-tokio-rustls",
    "postgres",
    "uuid",
    "chrono",
] }
tokio = { version = "1", features = ["full", "tracing"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5.1", features = ["catch-panic", "cors", "fs", "trace"] }
tracing = "0.1"
tracing-actix-web = "0.7.9"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.8.0", features = ["fast-rng"] }
sea-orm = { version = "0.12.15", features = [
    "sqlx-mysql",
    "sqlx-postgres",
    "sqlx-sqlite",
    "runtime-tokio-rustls",
    "macros",
    "with-chrono",
    "with-uuid",
    "with-rust_decimal",
    "debug-print",
] }
sea-orm-migration = "0.12.15"
sea-query = "0.30.7"
tower-cookies = { version = "0.10.0", features = ["signed"] }
thiserror = "1.0.59"
http = "1.1.0"
urlencoding = "2.1.3"

[[bin]]
name = "displex"
path = "src/main.rs"
